calendario, etiquetas, vista de semana

--- a/public/css/SASS/_variables.scss
+++ b/public/css/SASS/_variables.scss
@@ -10,12 +10,12 @@ $color-resaltado:#607D8B;
 $dark-color-resaltado:#425F6D;
 $cancel-color:#c36868;
 $dark-cancel-color:#884a4a;
-$save-color:$primary-color;
-$dark-save-color:$dark-primary-color;
+$save-color: rgba(75, 159, 79, 0.88);
+$dark-save-color: #3f8241;
 
 $primeraCabecera:#3f4558;
-$segundaCabecera:#4b5266;
-$textoSegundaCabecera:#c0c8da;
+$colorFondo:#4b5266;
+$textoCabecera:#c0c8da;
 
 $imagen-inicio-fondo:url('../../imagenes/fondos/fondo-equipo.jpg');
 
