--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,69 +1,233 @@
-/*--- FullCalendar ---*/
-#calendar {
-  height: 100%;
-}
-#calendar .fc-toolbar .fc-center {
-  color: black;
-  text-transform: uppercase;
-}
-#calendar .fc-day-number {
-  float: left;
-}
-#calendar .fc-body {
-  box-shadow: 2px 13px 34px 0 rgba(0, 0, 0, 0.75);
-}
-#calendar .fc-day-header {
-  text-transform: uppercase;
-  color: black;
-}
-#calendar .fc-day {
-  background-color: white;
-}
-#calendar .fc-day.fc-today {
-  background-color: #f1edd6;
-}
-#calendar .fc-day.fc-sat, #calendar .fc-day.fc-sun {
-  background-color: #f1f1f1;
-}
-
-/*--- FONDO ---*/
-.background_image {
-  background-image: url("../imagenes/fondos/cesped.jpg");
-  opacity: 0.7;
-  position: fixed;
-  top: 0;
-  left: 0;
-}
-
 /*--- HOME ---*/
-.resultados_content {
-  margin: 20px 0;
-  color: black;
+.main_calendar_panel {
+  height: 75vh;
 }
-.resultados_content .resultado_title {
-  margin: 40px 0;
+@media only screen and (max-width:758px) {
+  .main_calendar_panel {
+    height: 50vh;
+  }
 }
-.resultados_content .resultado_title span {
-  border-bottom: solid 2px black;
-  font-size: 2em;
+.main_calendar_panel .ppns-cal__col {
+  font-size: 0.9em;
 }
-.resultados_content .category_link {
-  border: solid 1.5px black;
-  margin-bottom: 10px;
-  border-radius: 10px;
-  cursor: pointer;
+
+.side_calendar_panel {
+  height: 50%;
 }
-.resultados_content .category_link:hover {
-  color: white;
-  background-color: grey;
-}
-.resultados_content .category_link span {
-  text-transform: uppercase;
+.side_calendar_panel:first-child {
+  margin-bottom: 30px;
 }
 
 .calendar_content {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  height: 100%;
+  position: relative;
+}
+
+.side_calendar .ppns-cal__cell span {
+  height: 25px;
+  width: 25px;
+  line-height: 25px;
+}
+
+.info_panel {
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: bold;
+  color: #009688;
+}
+.info_panel .material-icons {
+  color: #00796B;
+}
+
+.event_modal {
+  top: 100px;
+}
+.event_modal input {
+  border: none;
+  border-bottom: solid 1px #009688;
+  padding: 10px 15px;
+}
+.event_modal input:focus {
+  outline: none;
+}
+.event_modal #add_categories_event {
+  font-size: 0.8em;
+  margin-left: 15px;
+  color: #00796B;
+  cursor: pointer;
+  border: solid 0.8px;
+  border-radius: 15px;
+  padding: 5px;
+}
+.event_modal #add_categories_event:hover {
+  transform: scale(1.006);
+}
+.event_modal #add_categories_event .material-icons {
+  margin-right: 3px;
+}
+.event_modal .event_categorie {
+  box-shadow: 1px 1px 2px -1px;
+}
+.event_modal #add_rep_event {
+  font-size: 0.9em;
+  cursor: pointer;
+  border: solid 0.8px;
+  border-radius: 15px;
+  padding: 5px 15px;
+  font-weight: bold;
+  background-color: #fafafa;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
+}
+.event_modal #add_rep_event:hover {
+  transform: scale(1.006);
+}
+.event_modal #add_rep_event .material-icons {
+  margin-left: 3px;
+}
+.event_modal .foot-option {
+  font-size: 0.9em;
+  cursor: pointer;
+}
+.event_modal .foot-option.cancel_option {
+  color: #884a4a;
+}
+.event_modal .foot-option.save_option {
+  color: rgba(75, 159, 79, 0.88);
+}
+.event_modal .material-icons {
+  text-align: center;
+  font-size: 1em;
+}
+.event_modal .categories_event_panel {
+  position: absolute;
+  background-color: #fafafa;
+  box-shadow: -5px 4px 20px 0 rgba(0, 0, 0, 0.2);
+  top: 0;
+  left: 30%;
+  right: 0;
+  border-radius: 0.3rem;
+  transform: perspective(400px) rotateY(90deg);
+  padding: 15px;
+  min-width: 300px;
+  transition: transform 0.5s cubic-bezier(0, 0, 0.5, 1), opacity 0.2s linear;
+  transform-origin: left;
+  opacity: 0;
+}
+.event_modal .categories_event_panel.active {
+  transform: perspective(400px);
+  transition: transform 0.5s cubic-bezier(0, 0, 0.5, 1), opacity 0.2s linear;
+  opacity: 1;
+}
+.event_modal .categories_event_panel .panel-title {
+  font-weight: bold;
+}
+.event_modal .categories_event_panel .panel-title button {
+  font-size: 0.9em;
+}
+.event_modal .categories_event_panel .panel-title .material-icons.back_icon {
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding: 10px;
+  font-size: 0.9em;
+  opacity: 0.5;
+  cursor: pointer;
+}
+.event_modal .categories_event_panel .panel_body {
+  opacity: 0;
+  display: none;
+}
+.event_modal .categories_event_panel .panel_body.active {
+  opacity: 1;
+  display: block;
+}
+.event_modal .categories_event_panel .categorie {
+  padding: 5px 10px;
+  font-size: 0.8em;
+  border-radius: 7px;
+  cursor: pointer;
+  width: 100%;
+  max-width: 100%;
+  transition: transform 0.3s, box-shadow 0.3s;
+  color: white;
+  margin-bottom: 5px;
+}
+.event_modal .categories_event_panel .categorie:hover {
+  box-shadow: 1px 5px 17px 0 rgba(0, 0, 0, 0.1);
+  transform: scale(1.007);
+}
+.event_modal .categories_event_panel #add_new_categorie {
+  background-color: darkgrey;
+  color: black;
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+.event_modal .categories_event_panel #add_new_categorie:hover {
+  transform: scale(1);
+  box-shadow: none;
+  background-color: gray;
+}
+.event_modal .categories_event_panel #add_new_categorie .material-icons {
+  position: relative;
+  left: 0;
+  color: black;
+  margin-right: 10px;
+}
+.event_modal .categories_event_panel .categorie_row .material-icons {
+  position: absolute;
+  right: 15px;
+  cursor: pointer;
+  color: #BDBDBD;
+}
+.event_modal .categories_event_panel #create_category .title {
+  font-size: 0.9em;
+  font-weight: bold;
+}
+.event_modal .categories_event_panel #create_category .title.error {
+  color: red;
+}
+.event_modal .categories_event_panel #create_category .title.error:after {
+  content: "*";
+  color: red;
+}
+.event_modal .categories_event_panel #create_category input {
+  border: solid 1px #425F6D;
+  border-radius: 5px;
+  padding: 5px;
+  width: 70%;
+}
+.event_modal .categories_event_panel #create_category input.error {
+  border-color: #884a4a;
+}
+.event_modal .categories_event_panel #create_category .color_grid_selection {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 2px;
+}
+.event_modal .categories_event_panel #create_category .color_grid_selection .color_selection {
+  height: 50px;
+  width: 50px;
+  border-radius: 5px;
+  margin: 0 3px 3px 0;
+  cursor: pointer;
+  position: relative;
+}
+.event_modal .categories_event_panel #create_category .color_grid_selection .color_selection:hover {
+  opacity: 0.7;
+}
+.event_modal .categories_event_panel #create_category .color_grid_selection .color_selection .material-icons {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  color: white;
+  transform: translate(-50%, -50%);
+  font-size: 1.2em;
+  opacity: 0;
+  transition: opacity 0.2s linear;
+}
+.event_modal .categories_event_panel #create_category .color_grid_selection .color_selection.selected .material-icons {
+  opacity: 1;
 }
 
 /*--- EQUIPO TECNICO ---*/
@@ -235,13 +399,10 @@
 .material-card {
   width: 350px;
   cursor: pointer;
-  margin-bottom: 10px;
   height: 170px;
   transition: transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1), -webkit-transform 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
-}
-.material-card:hover {
-  transform: scale(1.006, 1.006);
-  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  box-shadow: 0 10px 27px 1px rgba(0, 0, 0, 0.75);
+  margin: 10px 5px;
 }
 .material-card:hover:before {
   opacity: 0.04;
@@ -271,20 +432,6 @@
   cursor: pointer;
   font-size: 50px;
 }
-.material-card .card-img.fondo .material-icons:before, .material-card .card-img.fondo .material-icons:after {
-  content: "";
-  border-radius: 50%;
-  position: absolute;
-  background-color: #000;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  transition: transform 0.7s cubic-bezier(0.4, 0, 0.2, 1), opacity 75ms linear;
-  transform-origin: center center;
-  transform: scale(0);
-}
 .material-card .card-img.fondo .material-icons.active:after {
   opacity: 0.16;
   transform: scale(1.7);
@@ -293,18 +440,5 @@
 /*
 * Cambio de secciones
 */
-.admin_panel {
-  transition: max-width 1s, padding;
-  transition-delay: 0.1s;
-  max-width: 0;
-  padding: 0;
-}
-.admin_panel.animate {
-  max-width: 100%;
-  padding: 20px 15px;
-}
-.admin_panel div.animated {
-  opacity: 0;
-}
 
 /*# sourceMappingURL=admin.css.map */
