--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,82 +10,142 @@ html, body {
 .header {
   position: fixed;
   top: 0;
-  height: 80px;
+  height: 60px;
   width: 100%;
   z-index: 9997;
+  background-color: white;
+  box-shadow: 0 5px 25px -8px rgba(0, 0, 0, 0.75);
+  white-space: nowrap;
+  padding: 0 40px;
+  border-bottom: solid 0.9px #BDBDBD;
+  margin: 0;
+}
+.header .header_link {
+  cursor: pointer;
+}
+.header .header_link.item {
+  font-family: "Raleway", sans-serif;
+  color: #c0c8da;
+  text-align: center;
+  display: flex;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+}
+@media (max-width: 768px) {
+  .header .header_link.item {
+    font-size: 0.9em;
+  }
+}
+.header .header_link.item:hover {
+  color: #00796b;
+}
+.header .header_link.item:first-child {
+  margin-left: 6px;
+}
+.header .header_link.item.active {
+  color: #00796b;
+  font-weight: bold;
+}
+.header .header_link.item.active:after {
+  width: 100%;
+}
+.header .header_link.item:after {
+  content: "";
+  display: inline-flex;
+  background-color: #00796b;
+  height: 2px;
+  width: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  transition: width 0.3s cubic-bezier(0.4, 0, 0.5, 1);
+}
+.header .header_link.icon {
+  font-size: 25px;
+  color: #00796b;
+  line-height: 25px;
+  position: relative;
+}
+.header .header_link.icon:hover .material-icons:before {
+  opacity: 0.4;
+  transform: scale(1.3);
+  background-color: #004c40;
+}
+.header .header_link.icon:hover ~ .js-tooltip {
+  animation: pulse 0.2s cubic-bezier(0, 0, 0.2, 1) forwards;
+}
+.header .header_link.icon.active .material-icons:after {
+  opacity: 0.16;
+  transform: scale(1.3);
+  background-color: #004c40;
+}
+.header .header_link.icon .material-icons {
+  position: relative;
+}
+.header img {
+  height: 90%;
+  margin-right: 40px;
 }
 @media only screen and (max-width:758px) {
   .header {
     height: 50px;
+    top: unset;
+    bottom: 0;
+    padding: 0;
+    box-shadow: 0 -5px 25px -8px rgba(0, 0, 0, 0.75);
+  }
+  .header .header_link#home_link img {
+    height: 70%;
+  }
+  .header .header_link img {
+    height: 55%;
+    margin: 0;
+    margin-left: 1px;
   }
 }
-.header .header_section {
-  height: 100%;
-  display: inline-flex;
-  padding: 0;
-}
-.header .header_section img {
-  height: 100%;
-  width: 100%;
-}
-.header .header_section .header_link {
-  border: solid 2px white;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  background-color: white;
-}
-.header .header_section .header_link.item {
-  background-image: linear-gradient(to bottom, black, grey);
-  opacity: 0.9;
-  color: white;
-  margin: 6px 6px 6px 0;
-  border-radius: 10px;
-  font-family: "Lato", sans-serif;
-  font-weight: bold;
-  font-size: 1.2em;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .header .header_section .header_link.item {
-    font-size: 0.9em;
+@media only screen and (min-width:992px) {
+  .header .header_link.item:first-child {
+    margin-left: 6px;
   }
-}
-.header .header_section .header_link.item:hover {
-  transform: scale(1.02);
-}
-.header .header_section .header_link.item.active {
-  margin-top: 12px;
-  margin-bottom: 0;
-  box-shadow: 3px -10px 22px -2px rgba(0, 0, 0, 0.75);
-}
-.header .header_section .header_link.item:first-child {
-  margin-left: 6px;
-}
-.header .header_section .header_link.icon {
-  font-size: 60px;
-  border-radius: 0 0 0 10px;
-  border: solid 2px #201f1ff2;
-  border-right: none;
-  border-top: none;
-}
-.header .header_section .header_link.logo {
-  border-radius: 0 0 10px 0;
-  border: solid 2px #201f1ff2;
-  border-left: none;
-  border-top: none;
 }
 
 /*--- CONTENIDO ---*/
 .main_content {
-  padding-top: 160px;
+  padding-top: 100px;
+}
+@media only screen and (max-width:758px) {
+  .main_content {
+    padding-top: 10px;
+  }
 }
 
 .main_panel {
-  background-color: #e9ebe6e6;
+  border-radius: 10px;
+  padding: 20px;
+  -webkit-box-shadow: 1px 11px 33px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 1px 11px 33px -9px rgba(0, 0, 0, 0.75);
   box-shadow: 1px 11px 33px -9px rgba(0, 0, 0, 0.75);
-  min-height: calc(100vh - 240px);
+  background-color: white;
+}
+@media only screen and (max-width:758px) {
+  .main_panel {
+    box-shadow: none;
+    background-color: #fafafa;
+    padding: 0;
+  }
+}
+
+.main_section {
+  position: absolute;
+  transform: translate(-100%, 0);
+  transition: transform 0.5s cubic-bezier(1, 0.2, 0.01, 1.15);
+  background-color: #fafafa;
+  margin: 0 -15px;
+  height: calc(100% - 100px);
+}
+.main_section.active {
+  transform: translate(0, 0);
 }
 
 /*--- MENU ---*/
@@ -268,6 +328,11 @@ html, body {
   cursor: pointer;
 }
 
+.modal_footer_buttons {
+  display: flex;
+  justify-content: space-around;
+}
+
 /*---LOGO_CARGA---*/
 .loader {
   position: fixed;
@@ -315,6 +380,39 @@ html, body {
   cursor: pointer;
 }
 
+.js-tooltip {
+  background-color: #004c40;
+  color: white;
+  border-radius: 2px;
+  padding: 0 8px;
+  height: 25px;
+  z-index: 3;
+  transform: scale(0);
+  position: absolute;
+  font-size: 10px;
+  line-height: 25px;
+  transform-origin: top center;
+  margin-left: -8px;
+}
+.js-tooltip.active {
+  animation: pulse 0.2s cubic-bezier(0, 0, 0.2, 1) forwards;
+}
+
+.material-icons:before, .material-icons:after {
+  content: "";
+  border-radius: 50%;
+  position: absolute;
+  background-color: #000;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: transform 225ms cubic-bezier(0.4, 0, 0.2, 1), opacity 75ms linear;
+  transform-origin: center center;
+  transform: scale(0);
+}
+
 .border-secundario {
   border: 1px solid #B2DFDB;
 }
@@ -342,17 +440,6 @@ html, body {
 
 div.cs-select.cs-skin-underline {
   font-size: 1em;
-}
-
-.panel-dbase {
-  border-radius: 10px;
-  padding: 20px;
-  -webkit-box-shadow: 0 0 16px -2px rgba(0, 0, 0, 0.51);
-  -moz-box-shadow: 0 0 16px -2px rgba(0, 0, 0, 0.51);
-  box-shadow: 0 0 16px -2px rgba(0, 0, 0, 0.51);
-}
-.panel-dbase.white {
-  background-color: white;
 }
 
 /*----BOTONES-----*/
@@ -415,17 +502,25 @@ div.cs-select.cs-skin-underline {
 }
 
 .btn-save {
-  background: #009688;
+  background: rgba(75, 159, 79, 0.88);
+  color: white;
+  font-size: 1.1em;
+  cursor: pointer;
+  padding: 5px 10px;
 }
 .btn-save:hover {
-  background-color: #00796B;
+  background-color: #3f8241;
+}
+
+.btn-shadow {
+  box-shadow: 2px 8px 17px 0 rgba(0, 0, 0, 0.1);
 }
 
 /*---- ANIMACIONES ---*/
 @keyframes pulse {
   0% {
     opacity: 0;
-    transform: scale(0);
+    transform: scale(0.5);
   }
   50% {
     transform: scale(0.99);
@@ -451,6 +546,20 @@ div.cs-select.cs-skin-underline {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+@keyframes pulseOut {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.99);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0.5);
+    visibility: hidden;
   }
 }
 
