--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -42,6 +42,41 @@
 .icon{
   cursor:pointer;
 }
+.js-tooltip{
+  background-color: #004c40;
+  color:white;
+  border-radius:2px;
+  padding:0 8px;
+  height:25px;
+  z-index:3;
+  transform:scale(0);
+  position:absolute;
+  font-size:10px;
+  line-height:25px;
+  transform-origin:top center;
+  margin-left:-8px;
+  &.active{
+    animation:pulse .2s cubic-bezier(0,0,.2,1) forwards;
+  }
+}
+
+.material-icons {
+  &:before, &:after {
+    content: '';
+    border-radius: 50%;
+    position: absolute;
+    background-color: #000;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: transform 225ms cubic-bezier(.4, 0, .2, 1), opacity 75ms linear;
+    transform-origin: center center;
+    transform: scale(0);
+  }
+}
+
 .border-secundario{border:1px solid $light-primary-color}
 
 .logout{cursor:pointer;}
@@ -61,14 +96,6 @@ div.cs-select{
   &.cs-skin-underline{
     font-size:1em;
   }
-}
-.panel-dbase{
-  border-radius:10px;
-  padding:20px;
-  -webkit-box-shadow: 0 0 16px -2px rgba(0,0,0,0.51);
-  -moz-box-shadow: 0 0 16px -2px rgba(0,0,0,0.51);
-  box-shadow: 0 0 16px -2px rgba(0,0,0,0.51);
-  &.white{background-color:white;}
 }
 /*----BOTONES-----*/
 
@@ -118,14 +145,20 @@ div.cs-select{
 }
 .btn-save{
   background:$save-color;
+  color:white;
+  font-size:1.1em;
+  cursor:pointer;
+  padding:5px 10px;
   &:hover{background-color:$dark-save-color}
 }
-
+.btn-shadow{
+  box-shadow:2px 8px 17px 0 rgba(0,0,0,0.1);
+}
 /*---- ANIMACIONES ---*/
 @keyframes pulse{
   0%{
     opacity:0;
-    transform:scale(0);
+    transform:scale(.5);
   }
   50%{
     transform:scale(.99)
@@ -149,4 +182,19 @@ div.cs-select{
 @keyframes rotar {
   0%{transform:rotate(0);}
   100%{transform:rotate(360deg);}
+}
+
+@keyframes pulseOut{
+  0%{
+    opacity:1;
+    transform:scale(1);
+  }
+  50%{
+    transform:scale(.99);
+  }
+  100%{
+    opacity:0;
+    transform:scale(.5);
+    visibility:hidden;
+  }
 }
